@@ -1,5 +1,7 @@
 June 11-30, 2012
  - Removed dependecy on file Compilers.inc
+ - Removed dependency on file MSAAIntf.pas
+ - Removed folder Common
  - Fixed issues #252 and #259
  - Bug fix: Functions GetLastVisible and GetLastVisibleNoInit return correct results even if some anchestor of the last visible node is not effectively visible
  - Improvement: Added functions GetNextSiblingNoInit and GetPreviousSiblingNoInit
